tests/ui/const-generics/slice-const-param-mismatch.full.stderr
error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:14:35
   |
LL |     let _: ConstString<"Hello"> = ConstString::<"World">;
   |            --------------------   ^^^^^^^^^^^^^^^^^^^^^^ expected `"Hello"`, found `"World"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstString<"Hello">`
              found struct `ConstString<"World">`
help: try directly constructing the struct instead
   |
LL |     let _: ConstString<"Hello"> = ConstString;
   |                                   ~~~~~~~~~~~

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:16:33
   |
LL |     let _: ConstString<"ℇ㇈↦"> = ConstString::<"ℇ㇈↥">;
   |            -------------------   ^^^^^^^^^^^^^^^^^^^^^ expected `"ℇ㇈↦"`, found `"ℇ㇈↥"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstString<"ℇ㇈↦">`
              found struct `ConstString<"ℇ㇈↥">`
help: try directly constructing the struct instead
   |
LL |     let _: ConstString<"ℇ㇈↦"> = ConstString;
   |                                  ~~~~~~~~~~~

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:18:33
   |
LL |     let _: ConstBytes<b"AAA"> = ConstBytes::<b"BBB">;
   |            ------------------   ^^^^^^^^^^^^^^^^^^^^ expected `b"AAA"`, found `b"BBB"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstBytes<b"AAA">`
              found struct `ConstBytes<b"BBB">`
help: try directly constructing the struct instead
   |
LL |     let _: ConstBytes<b"AAA"> = ConstBytes;
   |                                 ~~~~~~~~~~

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
